--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "http-status": "^1.0.1",
     "joi": "^13.1.2",
     "json-schema-ref-parser": "^4.1.0",
-    "swagger-parser": "^4.0.2"
+    "swagger-parser": "^4.0.2",
+    "swagger-ui-dist": "^3.17.5"
   },
   "devDependencies": {
     "blipp": "^3.0.0",
